     * Userspace datapath support is not added
   - ovs-dpctl and 'ovs-appctl dpctl/':
     * New commands '{add,mod,del}-flows' where added, which allow adding,
       deleting, or modifying flows based on information read from a file.
   - IPsec:
     * Add option '--no-cleanup' to allow ovs-monitor-ipsec to stop without
       tearing down IPsec tunnels.


v2.14.0 - 17 Aug 2020
---------------------
   - ovs-vswitchd no longer deletes datapath flows on exit by default.
   - OpenFlow:
     * The OpenFlow ofp_desc/serial_num may now be configured by setting the
       value of other-config:dp-sn in the Bridge table.
     * Added support to watch CONTROLLER port status in fast failover group.
     * New action "delete_field".
   - DPDK:
     * Deprecated DPDK pdump packet capture support removed.
     * Deprecated DPDK ring ports (dpdkr) are no longer supported.
     * Add hardware offload support for VLAN Push/Pop actions (experimental).
     * Add hardware offload support for matching IPv6 protocol (experimental).
     * Add hardware offload support for set of IPv6 src/dst/ttl
       and tunnel push-output actions (experimental).
     * OVS validated with DPDK 19.11.2, due to the inclusion of fixes for
       CVE-2020-10722, CVE-2020-10723, CVE-2020-10724, CVE-2020-10725 and
       CVE-2020-10726, this DPDK version is strongly recommended to be used.
     * New 'ovs-appctl dpdk/log-list' and 'ovs-appctl dpdk/log-set' commands
       to list and change log levels in DPDK components.
     * Vhost-user Dequeue zero-copy support is deprecated and will be removed
       in the next release.
   - Linux datapath:
     * Support for kernel versions up to 5.5.x.
   - AF_XDP:
     * New netdev class 'afxdp-nonpmd' for netdev-afxdp to save CPU cycles
       by enabling interrupt mode.
   - Userspace datapath:
     * Removed artificial datapath flow limit that was 65536.
       Now number of datapath flows is fully controlled by revalidators and the